# minicam-hal

./: .gitignore  .vagrantignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  Vagrantfile
app/: buffer_tracker.cpp  buffer_tracker.h  cli_result_collector.cpp  cli_result_collector.h  fence_aware_result_writer.cpp  fence_aware_result_writer.h  image_writer.cpp  image_writer.h  jpeg_codec.cpp  jpeg_codec.h  jpeg_encoder_processor.cpp  jpeg_encoder_processor.h  minicam_cli.cpp
hal/: bounded_task_queue.cpp  bounded_task_queue.h  camera_device_session.cpp  camera_device_session.h  camera_hal_runtime.cpp  camera_hal_runtime.h  dma_buf_allocator.cpp  dma_buf_allocator.h  driver_adapter.h  epoll_event_loop.cpp  epoll_event_loop.h  frame_metrics.cpp  frame_metrics.h  in_flight_request_tracker.cpp  in_flight_request_tracker.h  latency_tracker.cpp  latency_tracker.h  mock_driver_adapter.cpp  mock_driver_adapter.h  output_processor.h  task_executor.cpp  task_executor.h  v4l2_driver_adapter.cpp  v4l2_driver_adapter.h
interface/: camera_device.h  capture_request.h  capture_result.h
tests/: bounded_task_queue_test.cpp  camera_device_session_test.cpp  dma_buf_allocator_test.cpp  in_flight_request_tracker_test.cpp  task_executor_test.cpp
